# libyeast

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Doxyfile  DoxygenLayout.xml  LICENSE  Makefile  PLAN.html  PLAN.md  README.md  SECURITY.md  Skills.md  conanfile.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  gh-pages.yml  test-c.yml  test.yml  verify.yml  vet.yml
cmake/: yeast.pc.in  yeastConfig.cmake.in
docs/superpowers/plans/: 2026-07-13-annotated-grammar.md  2026-07-13-decoder.md
docs/superpowers/specs/: 2026-07-13-decoder-design.md
generator/: annotated2ir.py  chars.py  check_annotated_roundtrip.py  check_decoder.py  check_emitter.py  check_grammar_coverage.py  check_grammar_docs.py  check_interpreter.py  check_markers.py  check_messages.py  check_normalize.py  check_reference_tests.py  check_spec_roundtrip.py  check_spec_tests.py  check_star.py  check_vendor_spec.py  check_wire.py  gate.py  grammar2decoder.py  grammar2spec.py  interpreter.py  ir.py  ir2annotated.py  ir2spec.py  migrate_tests.py  normalize.py  reference_tests.py  spec2grammar.py  spec_suite.py  spec_tests.py  star.py  validate_grammar.py  wire.py
grammar/: annotated.yaml  messages.yaml  yeast-spec-1.2.yaml
include/: yeast.h
ports/yeast/: portfile.cmake  vcpkg.json
scripts/: check-deps.sh  check_comments.py  coverage_badge.py  coverage_gate.py  install-debian-build-deps.sh  install-debian-dev-deps.sh  install-macos-build-deps.sh  install-macos-dev-deps.sh  install-windows-build-deps.sh  wrap_long_comments.py
src/: alloc.h  counting_allocator.c  decoder.c  decoder.h  decoder_tables.h  memory.c  memory.h  messages.c  messages.h  parser.c  parser.h  source.c  source.h  streams.c  token_sink.c  token_sink.h  token_source.c  token_source.h  version.c  wire.c  wire.h  yeast.c
tests/: pkg_consumer.c  test_c.c  test_decoder.c  test_parser.c
tests/spec/: b-as-line-feed.cr.output  b-as-line-feed.crlf.output  b-as-space.cr.output  b-as-space.crlf.output  b-chomped-last.t=clip.invalid.output  b-l-spaced.n=4.invalid.output  b-l-trimmed.n=4.c=flow-in.invalid.output  b-nb-literal-next.n=4.invalid.output  b-non-content.cr.output  b-non-content.crlf.output  c-byte-order-mark.utf8.output  c-directives-end.invalid.output  c-document-end.invalid.output  c-double-quoted.n=0.c=flow-out.output  c-double-quoted.n=2.c=flow-out.output  c-double-quoted.n=4.c=flow-out.invalid.output  c-double-quoted.n=4.c=flow-out.output  c-flow-json-content.n=4.c=flow-in.mapping.output  c-flow-json-content.n=4.c=flow-in.sequence.output  c-flow-json-node.n=4.c=flow-in.invalid.output  c-flow-json-node.n=4.c=flow-in.tagged.output  c-flow-json-node.n=4.c=flow-in.untagged.output  c-flow-mapping.n=4.c=flow-in.compact.output  c-flow-mapping.n=4.c=flow-in.invalid.output  c-flow-mapping.n=4.c=flow-in.long.output  c-flow-mapping.n=4.c=flow-in.spaced.output  c-flow-sequence.n=4.c=flow-in.colons.output  c-flow-sequence.n=4.c=flow-in.compact.output  c-flow-sequence.n=4.c=flow-in.invalid.output  c-flow-sequence.n=4.c=flow-in.spaced.output  c-forbidden.invalid.output  c-indicator.directive.output  c-indicator.double-quote.output  c-indicator.folded.output  c-indicator.literal.output  c-indicator.mapping-end.output  c-indicator.reserved.backtick.output  c-l+folded.n=2.indent.output  c-l+folded.n=2.invalid.output  c-l+folded.n=2.simple.output  (+295 more)
